(rule
	(deps (source_tree libseahash))
	(targets libseahash_stubs.a)
	(action
		(bash "make -C libseahash && cp libseahash/libseahash_stubs.a libseahash_stubs.a")
	)
)

(library
	(name seahash)
	(self_build_stubs_archive (seahash))
	(libraries
		ctypes
		ctypes.foreign
	)
  (modules hash)
)

(executable
 (name suite)
 (libraries
  alcotest
  seahash
 )
 (modules suite)
)

(alias
 (name   runtest)
 (deps   (:suite suite.exe))
 (action (run %{suite}))
)
